--- a/package.json
+++ b/package.json
@@ -3,13 +3,45 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@fontsource/inter": "^5.1.0",
+    "@fontsource/plus-jakarta-sans": "^5.1.0",
+    "@fontsource/roboto-mono": "^5.1.0",
+    "@mui/icons-material": "^6.1.8",
+    "@mui/lab": "^6.0.0-beta.16",
+    "@mui/material": "^6.1.8",
+    "@mui/system": "^6.1.8",
+    "@mui/utils": "^6.1.8",
+    "@mui/x-date-pickers": "^7.22.3",
+    "@phosphor-icons/react": "^2.1.7",
+    "@reduxjs/toolkit": "^2.4.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^4.0.0",
+    "axios": "^1.7.7",
+    "chart.js": "^4.4.6",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
+    "dotenv": "^16.4.5",
+    "leaflet": "^1.9.4",
+    "qrcode": "^1.5.4",
+    "qrcode.react": "^4.1.0",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.6.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "redux": "^5.0.1",
+    "sweetalert2": "^11.14.5",
+    "sweetalert2-react-content": "^5.0.7",
+    "swr": "^2.2.5",
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
