--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_URL=localhost:5000
-# REACT_APP_URL=192.168.100.18:5000
+# REACT_APP_URL=localhost:5000
+REACT_APP_URL=192.168.100.18:5000
