--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
+    "react-thermal-printer": "^0.19.0",
     "redux": "^5.0.1",
     "sweetalert2": "^11.14.5",
     "sweetalert2-react-content": "^5.0.7",
