--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-REACT_APP_URL=apikasir.brabsen.my.id
+# REACT_APP_URL=apikasir.brabsen.my.id
+REACT_APP_URL=localhost:5000
 # REACT_APP_URL=192.168.100.18:5000
 #REACT_APP_URL=192.168.1.5:5000
 # REACT_APP_URL=192.168.1.20:5000
