--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.473.0",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.1.0",
     "react": "^18.3.1",
