--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.473.0",
     "qrcode": "^1.5.4",
